Enhance server configuration and build scripts. Added server build and start scripts to package.json. Updated CORS middleware in server/index.ts to restrict origins based on the environment.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:server": "tsc -p tsconfig.server.json",
+    "start:server": "node dist/server/index.js",
+    "start": "npm run build:server && npm run start:server"
   },
   "dependencies": {
     "@types/cors": "^2.8.18",
